# rocket_notes

./: .env-public  Cargo.toml  LICENSE.txt  README.txt
src/: errors.rs  main.rs  models.rs  routes.rs
static/: index.html  main.js  style.css
