[package]
name = "rocket_notes"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }

[default.databases]
notes_db = { url = "postgres://postgres:dinis1981@localhost/rocket_notes" }

